deployment-ca.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-app-deployment
  labels:
    app: custom-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: custom-app
  template:
    metadata:
      labels:
        app: custom-app
    spec:
      containers:
      - name: custom-app
        image: redratinthehat/static-mark:1.1
        ports:
        - containerPort: 80
