service-ca.yml
apiVersion: v1
kind: Service
metadata:
  name: custom-app
spec:
  ports:
  - name: app
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: custom-app
