ingress-ca.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: custom-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: static.redrat.diploma
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend: 
          service:
            name: custom-app
            port:
              number: 80
