ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ingress.test.ru
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend: 
          service:
            name: nginx
            port:
              number: 80
